<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gamebackground"
    tools:context="com.example.owner.assignment_3.Register">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:text="@string/reg_un"/>
    <EditText
        android:id="@+id/edt_txt_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/entr_un"/>

    <Button
        android:id="@+id/reg_btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg" />

</LinearLayout>
