<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/gamebackground"
    android:orientation="vertical"
    tools:context="com.example.owner.assignment_3.MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/title"
        android:textStyle="bold"
        android:textColor="@color/yellow"
        android:textSize="60sp" />

    <EditText
        android:id="@+id/un_ma"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:hint="@string/entr_un"
        android:layout_marginTop="10dp"
        android:background="@color/white" />

    <Button
        android:layout_marginTop="20dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/playGame"
        android:layout_gravity="center"
        android:background="@color/green"
        android:textColor="@color/white"
        android:padding="10dp"
        android:text="@string/play"/>

    <Button
        android:id="@+id/reg_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg"
        android:layout_marginLeft="470dp" />

</LinearLayout>

