<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_level_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bamboo"
    android:orientation="vertical"
    tools:context="com.example.owner.assignment_3.LevelMenu">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_btn"
        android:id="@+id/back_lm"
        android:onClick="back"
        />

    <Button
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        android:textColor="@color/white"
        android:id="@+id/levelOne"
        android:text="@string/level1"
        />

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:textColor="@color/white"
        android:id="@+id/levelTwo"
        android:text="@string/level2"/>

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@color/red"
        android:id="@+id/levelThree"
        android:text="@string/level3"/>

</LinearLayout>
