<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_progress"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/trophybg"
    tools:context="com.example.owner.assignment_3.Leaderboard">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leaderboard"
                android:textColor="@color/black"
                android:textSize="40dp"/>

            <Button
                android:id="@+id/back_btn_lb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_btn"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:layout_marginLeft="300dp"
                android:layout_gravity="end"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lb_fail_txt"
                android:textSize="15dp"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_marginLeft="200dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="15dp"
                android:textColor="@color/black"
                />

        </LinearLayout>
        <TextView
            android:id="@+id/ldboard"
            android:layout_marginLeft="30dp"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"/>

    </LinearLayout>

</LinearLayout>
