<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/reportbg"
    tools:context="com.example.owner.assignment_3.ProgressReport">

    <LinearLayout
        android:id="@+id/relativelayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_prog"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/un_log"/>

        <Button
            android:id="@+id/back_btn_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_prog_txt"
            android:layout_marginLeft="275dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50dp"
            android:textColor="@color/black"
            android:text="@string/tv_prog2"/>

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/chart"
            android:layout_width="550dp"
            android:layout_height="400dp" />

    </LinearLayout>

</ScrollView>

